# src/routes/review.route.js
@@ -1,6 +1,8 @@
 import express from 'express';
-import { addReview } from '../controllers/review.controller.js';
+import { addReviewController } from '../controllers/review.controller.js';
 
-export const reviewRouter = express.Router();
+const router = express.Router();
 
-reviewRouter.post('/add', addReview);
+router.post('/stores/:storeId/reviews', addReviewController);
+
+export default router;
