# src/routes/store.route.js
@@ -1,0 +1,8 @@
+import express from 'express';
+import { addStoreController } from '../controllers/store.controller.js';
+
+const router = express.Router();
+
+router.post('/regions/:regionId/stores', addStoreController);
+
+export default router;
