# swagger/store.swagger.yaml
@@ -1,16 +1,16 @@
 paths:
-  /stores/{storeId}/reviews:
+  /regions/{regionId}/stores:
     post:
       tags:
-        - Review
-      summary: 가게에 리뷰 추가
+        - Store
+      summary: 특정 지역에 가게 추가
       parameters:
         - in: path
-          name: storeId
+          name: regionId
           required: true
           schema:
             type: string
-          description: 가게 ID
+          description: 지역 ID
       requestBody:
         required: true
         content:
@@ -18,17 +18,17 @@ paths:
             schema:
               type: object
               properties:
-                rating:
-                  type: integer
-                  description: 리뷰 평점
-                  example: 5
-                comment:
+                name:
                   type: string
-                  description: 리뷰 내용
-                  example: Great place!
+                  description: 가게 이름
+                  example: My Store
+                address:
+                  type: string
+                  description: 가게 주소
+                  example: 123 Main St
       responses:
         '201':
-          description: 리뷰 추가 성공
+          description: 가게 추가 성공
           schema:
             type: object
             properties:
@@ -49,13 +49,13 @@ paths:
                 properties:
                   id:
                     type: string
-                    example: review123
-                  rating:
-                    type: integer
-                    example: 5
-                  comment:
+                    example: store123
+                  name:
                     type: string
-                    example: Great place!
+                    example: My Store
+                  address:
+                    type: string
+                    example: 123 Main St
         '400':
           description: 잘못된 요청
           schema:
